--- a/world1/start/start.html
+++ b/world1/start/start.html
@@ -4,18 +4,40 @@
     <dt>disableddirection</dt><dd>s</dd>
     <dt>disableddirection</dt><dd>w</dd>
 </dl>
-<div class='looknorth'>
-    Welcome! Here's a few things you should know:
+<div class='from'>
+    <div class='north'></div>
+    <div class='east'></div>
+    <div class='south'></div>
+    <div class='west'></div>
+</div>
+<div class='look'>
+    <div class='north'>
+        <div class='systemmessage'>
+            Welcome! Here's a few things you should know:
 
-    <ul>
-        <li>If you click in the grey area at the bottom of the screen, you can start typing! This is the command area -- hitting the <em>enter</em> key will execute the command you typed in!</li>
-        <li>At any point you can type in <span class='command'>?</span> (that is, just a question mark) in the entry field, then hit the enter key, to get a list of possible commands</li>
-        <li>Movement is controlled by the following commands: <span class='commandinactive'>n</span>, <span class='commandinactive'>e</span>, <span class='commandinactive'>s</span>, <span class='commandinactive'>w</span> -- which represent the 4 cardinal directions</li>
-        <li>The <span class='commandinactive'>a</span> command attacks whatever is in front of you</li>
-        <li>The <span class='commandinactive'>i</span> command lists the contents of your inventory</li>
-        <li>The <span class='commandinactive'>l</span> command describes what you see in the direction you are facing.</li>
-    </ul>
+            <ul>
+                <li>If you click in the grey area at the bottom of the screen, you can start typing! This is the command area -- hitting the <em>enter</em> key will execute the command you typed in!</li>
+                <li>At any point you can type in <span class='command'>?</span> (that is, just a question mark) in the entry field, then hit the enter key, to get a list of possible commands</li>
+                <li>Have fun! Remember, a part of playing this text adventure is figuring out what you need to type in to do something. It's part of puzzle!</li>
+            </ul>
 
-    Move <span class='command'>n</span>orth to start your game, oh, and have fun!
+            Move <span class='command'>n</span>orth to start your game!
+        </div>
+    </div>
+    <div class='east'>You see nothing</div>
+    <div class='south'>You see nothing</div>
+    <div class='west'>You see nothing</div>
+</div>
+<div class='move'>
+    <div class='north'>/node1/node1.html</div>
+    <div class='east'></div>
+    <div class='south'></div>
+    <div class='west'></div>
+</div>
+<div class='movefailed'>
+    <div class='north'></div>
+    <div class='east'>You can only move <span class='command'>n</span>orth from here</div>
+    <div class='south'>You can only move <span class='command'>n</span>orth from here</div>
+    <div class='west'>You can only move <span class='command'>n</span>orth from here</div>
 </div>
 </div>
