--- a/world1/node1/node1.html
+++ b/world1/node1/node1.html
@@ -28,7 +28,7 @@
 <div class='look'>
     <div class='north'>
         <p>
-            A gentle looking old <span class='talk' conversationid='1'>man</span> 
+            A gentle looking <span class='talk' conversationid='1'>old man</span> 
             dressed in a plain brown robe stands slightly hunched
             over a plain wooden podium with a quill in one hand, while the other holds down
             a page in a fairly thick book.
@@ -54,7 +54,12 @@
     <ol conversationid='1' canrepeat='false' gotoifrepeated='2'>
         <li>
             <div class='speech'>
-                <p>"Hello, hello -- you'll forgive an old man won't you? I need to ask you some questions. Let's start with your gender, do identify yourself as <span class='answer'>male</span> or <span class='answer'>female</span>?"</p>
+                <p>"Hello, hello -- you'll forgive an old man won't you? I need to ask you some questions before we can continue.</p>
+            </div>
+        </li>
+        <li>
+            <div class='speech'>
+                Let's start with your gender, do identify yourself as <span class='answer'>male</span> or <span class='answer'>female</span>?"</p>
             </div>
             <div class='incorrectanswer'>
                 <p>"Please, just answer the question. What gender do you identify yourself as, <span class='answer'>male</span> or <span class='answer'>female</span>?"</p>
