I've gotten the answering mechanism working, and fixed a couple of bugs in the talking mechanism. Next I have to get the mechanism to store the answers working

--- a/help.html
+++ b/help.html
@@ -12,6 +12,6 @@
         <dt>lw, look w, look west</dt><dd>Look towards the west</dd>
         <dt>l [object], look [object]</dt><dd>Look at the [object], for example, the command "l key" would print a description of an object "key" found in the area your character resides, if such an object exists.</dd>
         <dt>t [person], talk [person]</dt><dd>Initiate a conversation with the [person], for example, the command "t man" would initiate a conversation with the persona identified as 'man' in the current area, if a person identified as 'man' exists.</dd>
-        <dt>a [answer], answer [answer]</dt><dd>If you have initiated a conversation, you can reply by typeing in 'a' or 'answer' followed by an appropriate answer</dd>
+        <dt>say [something]</dt><dd>If you have initiated a conversation, you can reply by typeing in 's' or 'say' followed by an appropriate answer</dd>
     </dl>
 </div>
