--- a/world1/node1/node1.html
+++ b/world1/node1/node1.html
@@ -73,8 +73,10 @@
     </ol>
     <ol conversationid='2' canrepeat='true'>
         <li>
-            <p>"Oh dear me, you're still here! Well, get on with you -- through the gate now!"</p>
-        <li>
+            <div class='speech'>
+                <p>"Oh dear me, you're still here! Well, get on with you -- through the gate now!"</p>
+            </div>
+        </li>
     </ol>
 </div>
 </div>
