--- a/world1/node1/node1.html
+++ b/world1/node1/node1.html
@@ -59,15 +59,15 @@
         </li>
         <li>
             <div class='speech'>
-                Let's start with your gender, do identify yourself as <span class='answer'>male</span> or <span class='answer'>female</span>?"</p>
+                Let's start with your gender, do identify yourself as <span class='answer' field='gender'>male</span> or <span class='answer' field='gender'>female</span>?"</p>
             </div>
             <div class='incorrectanswer'>
-                <p>"Please, just answer the question. What gender do you identify yourself as, <span class='answer'>male</span> or <span class='answer'>female</span>?"</p>
+                <p>"Please, just answer the question. What gender do you identify yourself as, <span class='answer' field='gender'>male</span> or <span class='answer' field='gender'>female</span>?"</p>
             </div>
         </li>
         <li>
             <div class='speech'>
-                <p>"Fantastic!" he says, as he scribbles something unintelligble down in the book.</p>
+                <p>"Fantastic!" he says, "A <span replace='gender/quicktest' />! You should make lots of friends!" as he scribbles something unintelligble down in the book.</p>
             </div>
         </li>
     </ol>
