--- a/world1/start.html
+++ b/world1/start.html
@@ -29,7 +29,7 @@
     <div class='west'>You see nothing</div>
 </div>
 <div class='move'>
-    <div class='north'>/node1/node1.html</div>
+    <div class='north'>/node1.html</div>
     <div class='east'></div>
     <div class='south'></div>
     <div class='west'></div>
